# agenttrust-protocol

./: .env.example  .gitignore  404.html  README.md  demo.py  index.html  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  publish-npm.yml  publish-pypi.yml  test-python.yml  test-typescript.yml
api-reference/: index.html
changelog/: index.html
concepts/audit/: index.html
concepts/did/: index.html
concepts/tokens/: index.html
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: DIDRegistry.sol
docker/: Dockerfile.server  docker-compose.yml  init-db.sql
docs/: mkdocs.yml
docs/docs/: api-reference.md  (+5 more)
examples/: autogen_example.py  langchain_example.py  mcp_example.md  openclaw_example.py  typescript_example.ts
mcp-server/: README.md  config.py  server.py
ml-service/: pyproject.toml
ml-service/service/: rule_engine.py
ml-service/tests/: test_rules.py
quickstart/: index.html
sdk/: __init__.py  a2a.py  autogen_tools.py  client.py  openclaw_tools.py  tools.py  trust.py  vc.py  wallet.py
sdk-python/: index.html
sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json
sdk-typescript/: index.html
search/: search_index.json
server/: config.py  dependencies.py  main.py
server-rust/: .env.example  Cargo.toml  README.md  build.rs
server-rust/migrations/: 001_create_agents.sql  002_create_transactions.sql  003_create_audit_logs.sql  004_create_oauth_clients.sql  005_create_oauth_tokens.sql  006_create_approvals.sql  007_create_trust_scores.sql  008_create_verifiable_credentials.sql  009_create_fraud_alerts.sql  010_create_a2a_transfers.sql  011_create_escrows.sql  012_create_sagas.sql  013_create_saga_steps.sql  014_create_flow_policies.sql
server-rust/proto/: events.proto  payment.proto
server-rust/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
server-rust/src/crypto/: hashing.rs  jwt.rs  keys.rs  mod.rs  signing.rs
server-rust/src/events/: types.rs
server-rust/src/grpc/: mod.rs  payment_grpc.rs  server.rs
server-rust/src/middleware/: auth_middleware.rs  circuit_breaker.rs  mod.rs  rate_limit.rs
server-rust/src/models/: a2a_transfer.rs  agent.rs  approval.rs  audit_log.rs  escrow.rs  flow_policy.rs  fraud_alert.rs  mod.rs  oauth_client.rs  oauth_token.rs  saga.rs  transaction.rs  trust_score.rs  verifiable_credential.rs
server-rust/src/payment_providers/: mod.rs  paypay_provider.rs  stripe_provider.rs  traits.rs
server-rust/src/routes/: a2a.rs  approval.rs  audit.rs  auth.rs  did.rs  escrow.rs  flow.rs  fraud.rs  health.rs  mod.rs  oauth.rs  payment.rs  saga.rs  trust.rs  vc.rs
server-rust/src/scheduler/: escrow_timeout.rs  mod.rs  saga_timeout.rs
server-rust/src/services/: a2a_service.rs  approval_service.rs  audit_service.rs  auth_service.rs  did_service.rs  escrow_service.rs  flow_service.rs  fraud_service.rs  kafka_service.rs  mod.rs  oauth_service.rs  payment_service.rs  rate_limiter.rs  saga_service.rs  trust_service.rs  vc_service.rs
server-rust/tests/: test_auth.rs  test_circuit_breaker.rs  test_crypto.rs  test_did.rs  test_hashing.rs
server-rust/tests/common/: mod.rs
tests/: conftest.py  test_audit.py  test_auth.py  test_did.py  test_payment.py  test_sdk.py
(+45 files in other folders)
