[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenttrust-ml-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.62",
    "grpcio-tools>=1.62",
    "protobuf>=4.25",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio"]
